--- a/python/Plot_Events.ipynb
+++ b/python/Plot_Events.ipynb
@@ -40,9 +40,9 @@
     "Exposure = Volume*TotTime*(0.16/1000.0)\n",
     "Loc = Params.Boulby\n",
     "\n",
-    "ne = 20\n",
-    "nt = 10\n",
-    "nside = 0\n",
+    "ne = 1\n",
+    "nt = 1\n",
+    "nside = 4\n",
     "ReadOut_Name = \"Ideal\"\n",
     "\n",
     "Expt = Params.Detector(3.0,200.0,F19,Loc,Exposure,ne,nt,nside,False,ReadOut_Name)\n",
@@ -68,43 +68,43 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "20.121046529689629"
+       "array([ 0.52247838, -0.00097441, -0.85265198])"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "\n",
-    "sum(RD_nu[:,1])"
+    "LabFuncs.SolarDirection(Params.Jan1,Loc)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(38400, 4)"
+       "array([  91.,  274.])"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "shape(RD_nu)\n"
+    "n = 2\n",
+    "linspace(0.0+0.5*(365/n),365.0-0.5*(365/n),2)"
    ]
   },
   {
