--- a/python/test.ipynb
+++ b/python/test.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -12,84 +12,28 @@
       "==================================================\n",
       "CYGNUS limits:test/CYGNUS1000-Ideal.txt\n",
       "Helium...\n",
-      "--------------------------------------------------\n",
-      "--------------------------------------------------\n",
-      "Fluorine...\n",
-      "--------------------------------------------------\n",
-      "written to: test/CYGNUS1000-Ideal.txt\n",
-      "==================================================\n",
-      "Limit Time: 77.2617390156\n",
-      "==================================================\n",
-      "CYGNUS limits:test/CYGNUS1000-Pixel.txt\n",
-      "Helium...\n",
-      "--------------------------------------------------\n",
-      "--------------------------------------------------\n",
-      "Fluorine...\n",
-      "--------------------------------------------------\n",
-      "written to: test/CYGNUS1000-Pixel.txt\n",
-      "==================================================\n",
-      "Limit Time: 186.178590059\n",
-      "==================================================\n",
-      "CYGNUS limits:test/CYGNUS1000-Strip.txt\n",
-      "Helium...\n",
-      "--------------------------------------------------\n",
-      "--------------------------------------------------\n",
-      "Fluorine...\n",
-      "--------------------------------------------------\n",
-      "written to: test/CYGNUS1000-Strip.txt\n",
-      "==================================================\n",
-      "Limit Time: 190.31636405\n",
-      "==================================================\n",
-      "CYGNUS limits:test/CYGNUS1000-Optical.txt\n",
-      "Helium...\n",
-      "--------------------------------------------------\n",
-      "--------------------------------------------------\n",
-      "Fluorine...\n",
-      "--------------------------------------------------\n",
-      "written to: test/CYGNUS1000-Optical.txt\n",
-      "==================================================\n",
-      "Limit Time: 185.106652975\n",
-      "==================================================\n",
-      "CYGNUS limits:test/CYGNUS1000-Wire.txt\n",
-      "Helium...\n",
-      "--------------------------------------------------\n",
-      "--------------------------------------------------\n",
-      "Fluorine...\n",
-      "--------------------------------------------------\n",
-      "written to: test/CYGNUS1000-Wire.txt\n",
-      "==================================================\n",
-      "Limit Time: 201.124248981\n",
-      "==================================================\n",
-      "CYGNUS limits:test/CYGNUS1000-Pad.txt\n",
-      "Helium...\n",
-      "--------------------------------------------------\n",
-      "--------------------------------------------------\n",
-      "Fluorine...\n",
-      "--------------------------------------------------\n",
-      "written to: test/CYGNUS1000-Pad.txt\n",
-      "==================================================\n",
-      "Limit Time: 211.388499975\n",
-      "==================================================\n",
-      "CYGNUS limits:test/CYGNUS1000-Planar.txt\n",
-      "Helium...\n",
-      "--------------------------------------------------\n",
-      "--------------------------------------------------\n",
-      "Fluorine...\n",
-      "--------------------------------------------------\n",
-      "written to: test/CYGNUS1000-Planar.txt\n",
-      "==================================================\n",
-      "Limit Time: 195.89070487\n",
-      "==================================================\n",
-      "CYGNUS limits:test/CYGNUS1000-Nondirectional.txt\n",
-      "Helium...\n",
-      "--------------------------------------------------\n",
-      "--------------------------------------------------\n",
-      "Fluorine...\n",
-      "--------------------------------------------------\n",
-      "written to: test/CYGNUS1000-Nondirectional.txt\n",
-      "==================================================\n",
-      "Limit Time: 10.7579181194\n",
-      "Total Time: -1258.02641416\n"
+      "m_chi =  0.5 | sigma_p =  0.0 | # Signal =  0.0 | # Background =  8.45644264591\n",
+      "m_chi =  0.583899311869 | sigma_p =  0.0 | # Signal =  0.0 | # Background =  8.45644264591\n",
+      "m_chi =  0.681876812802 | sigma_p =  0.0 | # Signal =  0.0 | # Background =  8.45644264591\n",
+      "m_chi =  0.796294803549 | sigma_p =  0.0 | # Signal =  0.0 | # Background =  8.45644264591\n",
+      "m_chi =  0.929911975673 | sigma_p =  3.75967496579e-42 | # Signal =  0.533391702558 | # Background =  8.45644264591\n",
+      "m_chi =  1.08594992539 | sigma_p =  2.74712078927e-43 | # Signal =  0.584959028276 | # Background =  8.45644264591\n",
+      "m_chi =  1.26817082832 | sigma_p =  6.69346971296e-44 | # Signal =  0.637700929382 | # Background =  8.45644264591\n",
+      "m_chi =  1.48096814797 | sigma_p =  2.57526332677e-44 | # Signal =  0.662670045102 | # Background =  8.45644264591\n"
+     ]
+    },
+    {
+     "ename": "KeyboardInterrupt",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-4-c1c8e737d01b>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m     24\u001b[0m \u001b[0;32mfor\u001b[0m \u001b[0mi\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mrange\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;36m8\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     25\u001b[0m     \u001b[0mt1\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mtime\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mtime\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 26\u001b[0;31m     \u001b[0mDLHe\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mDLF\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mCYGNUSLimit\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"test/CYGNUS1000-\"\u001b[0m\u001b[0;34m+\u001b[0m\u001b[0mfname\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mi\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m+\u001b[0m\u001b[0;34m\".txt\"\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mm_vals\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0msigma_vals\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mVolume\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mTotTime\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mnt\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;36m10\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mnside\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;36m8\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mReadOut_Name\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mfname\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mi\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mVerbose\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mTrue\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     27\u001b[0m     \u001b[0mt2\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mtime\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mtime\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     28\u001b[0m     \u001b[0;32mprint\u001b[0m \u001b[0;34m'>>>Limit Time:'\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mt2\u001b[0m\u001b[0;34m-\u001b[0m\u001b[0mt1\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m/Users/ciaranohare/Work/Zaragoza/CYGNUS/fort/python/Like.py\u001b[0m in \u001b[0;36mCYGNUSLimit\u001b[0;34m(filename, m_vals, sigma_vals, Volume, TotTime, HaloModel, ne, nt, nside, Eoff, ReadOut_Name, Verbose)\u001b[0m\n\u001b[1;32m     43\u001b[0m     \u001b[0;31m# Calculate Helium limits\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     44\u001b[0m     \u001b[0;32mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"Helium...\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 45\u001b[0;31m     \u001b[0mDLHe\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mGetLimits\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mm_vals\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0msigma_vals\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mHaloModel\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mDetector_He\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mVerbose\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mVerbose\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     46\u001b[0m     \u001b[0;32mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"-\"\u001b[0m\u001b[0;34m*\u001b[0m\u001b[0;36m50\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     47\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m/Users/ciaranohare/Work/Zaragoza/CYGNUS/fort/python/Like.py\u001b[0m in \u001b[0;36mGetLimits\u001b[0;34m(m_vals, sigma_vals, HaloModel, Expt, Verbose)\u001b[0m\n\u001b[1;32m    131\u001b[0m     \u001b[0;32mfor\u001b[0m \u001b[0mim\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mrange\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mnm\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    132\u001b[0m         \u001b[0mSignal\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mParams\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mWIMP\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mm_vals\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mim\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;36m1.0e-45\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 133\u001b[0;31m         \u001b[0mRD_wimp\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mLabFuncs\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mBinEvents\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mExpt\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mWIMPFuncs\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mWIMPRate\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mSignal\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mHaloModel\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    134\u001b[0m         \u001b[0mSignal\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mRecoilDistribution\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mRD_wimp\u001b[0m\u001b[0;34m/\u001b[0m\u001b[0;36m1.0e-45\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    135\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m/Users/ciaranohare/Work/Zaragoza/CYGNUS/fort/python/LabFuncs.py\u001b[0m in \u001b[0;36mBinEvents\u001b[0;34m(Expt, dRfunc, *Args)\u001b[0m\n\u001b[1;32m     49\u001b[0m         \u001b[0;32mfor\u001b[0m \u001b[0mi\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mrange\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mnt\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     50\u001b[0m             \u001b[0;32mfor\u001b[0m \u001b[0mj\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mrange\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mne\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 51\u001b[0;31m                 \u001b[0;32mfor\u001b[0m \u001b[0mk\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mrange\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mnpix\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     52\u001b[0m                     \u001b[0mE_r\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mii\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mE_bins\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mj\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     53\u001b[0m                     \u001b[0mE\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mii\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mE_bins\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mj\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m*\u001b[0m\u001b[0mq\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mk\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mKeyboardInterrupt\u001b[0m: "
      ]
     }
    ],
@@ -119,7 +63,7 @@
     "t0 = time.time()\n",
     "for i in range(0,8):\n",
     "    t1 = time.time()\n",
-    "    DLHe,DLF = CYGNUSLimit(\"test/CYGNUS1000-\"+fname[i]+\".txt\",m_vals,sigma_vals,Volume,TotTime, ReadOut_Name=fname[i],Verbose=False)\n",
+    "    DLHe,DLF = CYGNUSLimit(\"test/CYGNUS1000-\"+fname[i]+\".txt\",m_vals,sigma_vals,Volume,TotTime,nt = 10,nside=8, ReadOut_Name=fname[i],Verbose=True)\n",
     "    t2 = time.time()\n",
     "    print '>>>Limit Time:',t2-t1\n",
     "\n",
