more nu floor testing

--- a/python/Plot_ProjectedLimits.ipynb
+++ b/python/Plot_ProjectedLimits.ipynb
@@ -282,12 +282,8 @@
     }
    ],
    "source": [
-    "import healpy as hp\n",
-    "RD_wimp0 = loadtxt('../code/RD_wimp_0.dat')\n",
-    "RD_nu0 = loadtxt('../code/RD_nu_0.txt')\n",
-    "#hp.mollview(RD_nu0[:,1], title=\"Mollview image RING\")\n",
-    "hp.mollview(RD_wimp0[:,0], title=\"Mollview image RING\")\n",
-    "plt.show()"
+    "m_vals = logspace(10.0,100.0)\n",
+    "plt.loglog()\n"
    ]
   },
   {
