--- a/python/BackgroundStudyPlots.ipynb
+++ b/python/BackgroundStudyPlots.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 347,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -69,7 +69,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 348,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -78,7 +78,7 @@
        "240"
       ]
      },
-     "execution_count": 348,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -89,7 +89,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 349,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -106,6 +106,8 @@
     }
    ],
    "source": [
+    "import cmocean\n",
+    "\n",
     "fig,ax = MySquarePlot('Time [hours]','',lfs=40,tfs=34)\n",
     "\n",
     "dat1 = loadtxt('../backgrounds/RadonFilter_upper.txt',delimiter=',')\n",
@@ -156,7 +158,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 350,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -229,7 +231,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 412,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -278,7 +280,8 @@
     "plt.show()\n",
     "\n",
     "\n",
-    "\n"
+    "\n",
+    "fig.savefig('../plots/Drift_MinorityCarriers.pdf',bbox_inches='tight')\n"
    ]
   },
   {
